# EviStateBench

./: .gitignore  EviStateBench_IDEA.md  EviStateBench_PAPER_WRITING_BLUEPRINT.md  README.md  baseline_implementation_ideas.md  pyproject.toml
evistatebench/: __init__.py  evistatebench_idea_experiment_brief.md  queries.py  schema.py
exp/: backbone_signal_target_estimates_measured.json  backbone_signal_target_estimates_measured.py  beta_injection_study.py  beta_injection_study_data.json  corrupted_control_summary.py  corrupted_control_summary_data.json  main_policy_improvement.py  main_policy_improvement_data.json  plot_style.py  signal_ablation_dense.py  signal_ablation_dense_data.json  training_convergence.py  training_convergence_data.json
lifelongscenedb/: __init__.py  confidence.py  db.py  indexes.py  queries.py  schema.py  store.py  updater.py  utils.py
real_data_pipeline/: BEHAVIOR_DOWNLOAD_PLAN.md  ICDE_BENCHMARK_ENRICHMENT_PLAN.md  PROJECT_CLEANUP.md  README.md  REAL_BENCHMARK_PROTOCOL.md  env_behavior.sh
reports/: bddl_task_audit.json  bddl_task_audit.md  clean_observations_v0.md  evaluator_self_check_v0.md  ground_truth_answers_v0.md  perturbed_observations_v0.md  public_artifact_validation_v0.md  public_artifacts_v0.md  query_sets_v0.md  query_templates_v0.md  synthetic_timelines_v0.md  task_predicate_instances_v0.md  task_space_v0.md
scripts/: run_toy_case.py
tools/: 1_build_synthetic_timelines.py  3_build_perturbed_observations.py  4_build_query_sets.py  5_build_ground_truth_answers.py  6_evaluate_answers.py  7_build_public_artifacts.py  README.md
(+57 files in other folders)
