[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifelongscenedb"
version = "0.1.0"
description = "Core probabilistic bitemporal scene memory prototype"
requires-python = ">=3.10"
dependencies = [
  "pandas",
]

[tool.setuptools.packages.find]
include = ["lifelongscenedb*"]
