[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evistatebench"
version = "0.1.0"
description = "Benchmark scaffolding for temporal task-state view maintenance over embodied observation streams"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["evistatebench*"]
